[package]
name = "tick-tack-toe-killer-rs"
version = "0.1.0"
readme = "README.md"
authors = ["shmutalov <shmutalov@gmail.com>"]
repository = "https://github.com/shmutalov/tick-tack-toe-killer-rs"

[dependencies]
gfx_core = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
gfx = "*"
glutin = "*"
cgmath = "*"
time = "*"
rand = "*"