[package]
name = "tick-tack-toe-killer-rs"
version = "0.1.0"
readme = "README.md"
authors = ["shmutalov <shmutalov@gmail.com>"]
repository = "https://github.com/shmutalov/tick-tack-toe-killer-rs"

[dependencies]
gfx_core = "*"
gfx_device_gl = "*"
gfx_window_glutin = "0.12.0"
gfx = "*"
glutin = "0.6.2"
cgmath = "*"
time = "*"
rand = "*"